Configs and first img

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "url": "git://github.com/nmelhado/league-page.git"
   },
   "author": {
-    "name": "Nicholas Melhado",
-    "email": "n.melhado@gmail.com",
-    "url": "http://www.nmelhado.com/"
+    "name": "Will Dembinski ",
+    "email": "willdembinski@gmail.com",
+    "url": "https://github.com/wi-ski"
   },
   "contributors": [
     {
